--- a/src/components/Gif/gif.module.css
+++ b/src/components/Gif/gif.module.css
@@ -17,6 +17,7 @@
 	height: 40px;
 	font-size: 20px;
 	font-weight: bold;
+	cursor: pointer;
 
 	animation: animatetop 0.4s;
 }
@@ -28,6 +29,10 @@
 	to {
 		opacity: 1; 
 	}
+}
+
+.gifBlocks button:hover {
+	opacity: 0.9;
 }
 
 .gif_item {
