--- a/src/components/Gif/gif.module.css
+++ b/src/components/Gif/gif.module.css
@@ -6,6 +6,10 @@
 }
 
 .gifBlocks button {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 	position: absolute;
 	background: linear-gradient(rgb(255,212,3), rgb(248,157,23));
 	border-radius: 7px;
