--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,17 @@
-body {
-  margin: 0;
-  background: rgb(18, 18, 18);
-  color: white;
-  position: relative;
+* {
+  box-sizing: border-box;
 }
 
-.container {
+
+
+.head {
+  display: flex;
   width: 90%;
   max-width: 995px;
   margin: 0 auto;
 }
 
-.head {
-  display: flex;
-  width: 75%;
-  margin: 0 auto;
-}
-
-.header {
+header {
   width: 100%;
   position: fixed;
   top: 0;
@@ -32,21 +26,19 @@ body {
   margin-right: 10px;
 }
 
-.header input {
+header input {
   width: 100%;
   outline: none;
   font-size: 20px;
   padding: 0 15px;
 }
 
-
 @media (max-width: 840px) {
-
   .head {
     width: 100%;
   }
 
-  .header input {
+  header input {
     margin-right: 20px;
   }
 
@@ -54,4 +46,3 @@ body {
     width: 90%;
   }
 }
-
