--- a/src/components/Gif/gif.module.css
+++ b/src/components/Gif/gif.module.css
@@ -1,79 +1,99 @@
-.gifBlocks {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
-	margin-top: 80px;
+.gifBlock {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-top: 80px;
+  width: 90%;
+  max-width: 995px;
+  margin: 0 auto;
+  height: 100vh;
+  overflow: auto;
 }
 
-.gifBlocks button {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	align-items: center;
-	position: absolute;
-	background: linear-gradient(rgb(255,212,3), rgb(248,157,23));
-	border-radius: 7px;
-	border: none;
-	outline: none;
-	right: 10px;
-	bottom: 10px;
-	width: 70px;
-	height: 40px;
-	font-size: 20px;
-	font-weight: bold;
-	cursor: pointer;
+.gifBlock::-webkit-scrollbar {
+  display: none;
+}
 
-	animation: animatetop 0.4s;
+/* .gifBlock::-webkit-scrollbar {
+  width: 3px;
+  background-color: none;
+}
+.gifBlock::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 9em;
+} */
+
+.preloader {
+  margin: 0 auto;
+}
+
+.gifBlock button {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  background: linear-gradient(rgb(255, 212, 3), rgb(248, 157, 23));
+  border-radius: 7px;
+  border: none;
+  outline: none;
+  right: 10px;
+  bottom: 20px;
+  width: 70px;
+  height: 40px;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+
+  animation: animatetop 0.4s;
 }
 
 @keyframes animatetop {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1; 
-	}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-.gifBlocks button:hover {
-	opacity: 0.9;
+.gifBlock button:hover {
+  opacity: 0.9;
 }
 
 .gif_item {
-	width: 180px;
-	height: 180px;
-	margin: 0 2px 5px 2px;
-	overflow: hidden;
+  width: 180px;
+  height: 180px;
+  margin: 0 2px 5px 2px;
+  overflow: hidden;
 }
 
 .gif_item img {
-	width: 100%;
+  width: 100%;
 }
-
 
 @media (max-width: 1015px) {
-	.gifBlocks {
-		justify-content: center;
-	}
+  .gifBlock {
+    justify-content: center;
+  }
 }
 
-
 @media (max-width: 840px) {
-	.gifBlocks {
-		justify-content: center;
-	}
+  .gifBlock {
+    justify-content: center;
+  }
 }
 
 @media (max-width: 414px) {
-	.gif_item {
-		width: 100px;
-		height: 100px;
-	}
+  .gif_item {
+    width: 100px;
+    height: 100px;
+  }
 }
 
 @media (max-width: 320px) {
-	.gif_item {
-		width: 80px;
-		height: 80px;
-	}
+  .gif_item {
+    width: 80px;
+    height: 80px;
+  }
 }
